feat: Add FirebaseUI Login with EmailAuth and GoogleEmail

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,21 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".ChatRoomActivity"
-            android:theme="@style/ChatRoomTheme"
-            android:parentActivityName=".MainActivity"
-            ></activity>
-        <activity
-            android:name=".FriendDetailActivity"
-            android:theme="@style/FriendDetailTheme" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".SplashActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ChatRoomActivity"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/ChatRoomTheme" />
+        <activity
+            android:name=".FriendDetailActivity"
+            android:theme="@style/FriendDetailTheme" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
