--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,11 @@ android {
         }
     }
     buildToolsVersion '28.0.3'
+
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -24,11 +29,20 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.google.firebase:firebase-auth:16.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.google.firebase:firebase-core:16.0.1'
+
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+    implementation 'com.firebaseui:firebase-ui-auth-github:4.3.1'
+    implementation 'com.facebook.android:facebook-login:4.41.0'
+    implementation("com.twitter.sdk.android:twitter-core:3.3.0@aar") { transitive = true }
+
+
 }
 apply plugin: 'com.google.gms.google-services'
