--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity
             android:name=".ChatRoomActivity"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/ChatRoomTheme" />
+            android:theme="@style/ChatRoomTheme"
+            android:windowSoftInputMode="adjustResize"/>
         <activity
             android:name=".FriendDetailActivity"
             android:theme="@style/FriendDetailTheme" />
