--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth-github:4.3.1'
     implementation 'com.facebook.android:facebook-login:4.41.0'
     implementation("com.twitter.sdk.android:twitter-core:3.3.0@aar") { transitive = true }
+    implementation 'com.google.firebase:firebase-messaging:17.5.0'
 
 
 }
